[tool.poetry]
name = "fast-transformers-inference"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "fast_transformers_inference"}]

[tool.poetry.dependencies]
python = "^3.8"
sagemaker = "^2.116.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
